...
    },
    [navigation]
  );

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
              title="Checkout Sessions (private preview)"
              onPress={() => navigation.navigate('CheckoutPlaygroundScreen')}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (EmbeddedPaymentElement)"
              onPress={() => {
                navigation.navigate('EmbeddedPaymentElementScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Bank redirects">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Bancontact Payment"
              onPress={() => {
                navigation.navigate('BancontactPaymentScreen');
...
