...
      return;
    }

    // 2. Confirm payment with CVC
    // The rest will be done automatically using webhooks
    const { error, paymentIntent } = await confirmPayment(clientSecret, {
      type: 'Card',
      cvc: cvc,
      paymentMethodId,
    });

    if (error) {
      Alert.alert(`Error code: ${error.code}`, error.message);
...
