...
    }
    switch ((result as Checkout.Result).status) {
      case 'completed':
        Alert.alert(
          'Success',
          `Payment status: ${(result as Extract<Checkout.Result, { status: 'completed' }>).paymentStatus}`,
          [{ text: 'OK', onPress: () => navigation.goBack() }]
        );
        break;
      case 'canceled':
        Alert.alert('Canceled', 'The payment was canceled.');
        break;
      case 'failed':
...
